--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,7 @@ WordPress.com Styles
 // Based loosely on HTML5 Boilerplate
 
 // Variables
-@import "variables/dotcom-colors"; // WordPress.com Colors
+@import "variables/wpcom-colors"; // WordPress.com Colors
 @import "variables/typography"; // Typography
 @import "variables/variables"; // Other variables
 
