--- a/scss/icons/icons.scss
+++ b/scss/icons/icons.scss
@@ -18,7 +18,7 @@
 	}
 }
 
-.wpcom_logo {
+.wpcom-logo {
 	$size: 32px;
 
 	display: inline-block;
@@ -43,7 +43,7 @@
 	}
 }
 // If you want to reuse/resize do something like:
-// .foo.wpcom_logo {
+// .foo.wpcom-logo {
 // 	$size: 50px;
 
 // 	color: $base-lighter-blue;
