--- a/scss/variables/variables.scss
+++ b/scss/variables/variables.scss
@@ -2,3 +2,5 @@
 // Global variables
 // Use when creating a variable used through multiple sheets
 // ==========================================================================
+
+$site--max-width: 960px;
