--- a/scss/partials/buttons.scss
+++ b/scss/partials/buttons.scss
@@ -11,36 +11,36 @@
 	color: #dcedf5;
 	text-shadow: 0 -1px 0 rgba(0,116,162,0.8);
 	border: none;
+	border-radius: 3px;
 	background: #54b2de;
+	box-shadow: inset 0 1px 0 rgba(120,200,230,0.5);
 	cursor: pointer;
 	outline: none;
-	@include border-radius(3px);
 	@include gradient(#278dbc, #0074a2);
-	@include box-shadow(inset 0 1px 0 rgba(120,200,230,0.5));
 
 	&:hover {
 		color: #fff;
 		text-shadow: 0 -1px 0 rgb(0,116,162);
-		@include gradient(#2ea2cc, #0074a2);
-		@include box-shadow(
+		box-shadow:
 			inset 0 1px 0 #2ea2cc,
 			inset 0 2px 0 rgba(120,200,230,0.7)
-		);
+		;
+		@include gradient(#2ea2cc, #0074a2);
 	}
 	&:active {
 		color:rgba(255,255,255,.9);
 		background: #3089b0;
-		@include gradient(#278dbc, #0074a2);
-		@include box-shadow(
+		box-shadow:
 			inset 0 1px 5px #005684,
 			inset 0 -1px 0 #278dbc
-		);
+		;
+		@include gradient(#278dbc, #0074a2);
 	}
 }
 %button_disabled {
 	color: #94cde7;
+	box-shadow: none;
 	background: #298cba;
-	@include box-shadow(none);
 }
 
 
@@ -80,38 +80,38 @@ input[disabled]:hover {
 .button_secondary {
 	color: #555;
 	text-shadow: 0 1px 0 rgba(255,255,255,.7);
-	@include gradient(#f5f5f5, #ddd);
-	@include box-shadow(
+	box-shadow:
 		inset 0 1px 0 rgba(0,0,0,.05),
 		inset 0 2px 0 rgba(255,255,255,.4),
 		inset 0 -1px 1px rgba(0,0,0,0.1)
-	);
+	;
+	@include gradient(#f5f5f5, #ddd);
 
 	&:hover {
 		color: #222;
 		text-shadow: 0 1px 0 rgba(255,255,255,.7);
-		@include gradient(#fff, #ddd);
-		@include box-shadow(
+		box-shadow:
 			inset 0 1px 0 rgba(0,0,0,.05),
 			inset 0 2px 0 rgba(255,255,255,.5),
 			inset 0 -1px 1px rgba(0,0,0,0.1)
-		);
+		;
+		@include gradient(#fff, #ddd);
 	}
 	&:active {
 		color: #555;
 		text-shadow: 0 1px 0 rgba(255,255,255,.3);
-		@include gradient(#f5f5f5, #ddd);
-		@include box-shadow(
+		box-shadow:
 			inset 0 1px 5px rgba(0,0,0,.3),
 			inset 0 -1px 0 rgba(255,255,255,.5)
-		);
+		;
+		@include gradient(#f5f5f5, #ddd);
 	}
 }
 .button_secondary[disabled],
 // .button--secondary.disabled, Maybe?
 .button_secondary:disabled {
 	color: #999;
+	box-shadow: none;
 	background: #e3e3e3;
 	cursor: default;
-	@include box-shadow(none);
 }
