--- a/scss/partials/form.scss
+++ b/scss/partials/form.scss
@@ -19,27 +19,30 @@
 	line-height: 1.4;
 	border: 1px solid #dfdfdf;
 	background: #f9f9f9;
-	@include transition(all .15s ease-in-out);
-	@include placeholder(){
+	transition: all .15s ease-in-out;
+
+	&::placeholder {  
 		color: #aaa;
-	};
+	}
 
 	&:hover {
 		border-color: #aaa;
 		background: #fff;
-		@include placeholder{
+
+		&::placeholder {  
 			color: #888;
-		};
+		}
 	}
 	&:focus {
 		color: #5c6671;
 		border-color: #1e8cbe;
 		background: #fff;
 		outline: none;
-		@include box-shadow(inset 0 1px 4px 0 rgba(0, 0, 0, 0.3));
-		@include placeholder{
+		box-shadow: inset 0 1px 4px 0 rgba(0, 0, 0, 0.3);
+
+		&::placeholder {
 			color: #888;
-		};
+		}
 	}
 }
 %textarea {
