--- a/scss/partials/wpcom-header.scss
+++ b/scss/partials/wpcom-header.scss
@@ -1,36 +1,32 @@
 // ==========================================================================
-// WordPress.com Header Navigation
+// WordPress.com Header Navigation (non-WP theme)
 //
 // So blue. So good.
 // ==========================================================================
 
 
-// I added sectional prefixes. They seem like a good idea, but could be 
-// improved upon.
+// Let's try this BEM thing. Initially, I tried block_element-modifier, but I
+// like the ability to hyphen separate words in an element.
 //
-// syntax == style_section_part
-// Example: .wpcom_header_title
-// wpcom  == style
-// header == current section
-// title  == part
+// syntax == block__element--modifier
+// Example: .wpcom-header__site-title--gigantor
+//
+// Why two underscores?
+// Readability. It's easier to scan through BEM with the extra gap.
 
-.wpcom_header {
+.wpcom-header {
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 46px;
 	background: #1e8cbe;
-	z-index: 9999;
-	@include box-shadow(
+	box-shadow:
 		inset 0 -1px 0 rgba(0, 86, 132, 0.8),
 		0 1px 3px rgba(0, 86, 132, 0.4)
-	);
+	;
+	z-index: 9999;
 
-	div {// change to .wrapper class for reuse?
-		margin: 0 auto;
-		max-width: 956px;
-	}
 	ul {
 		border: 0;
 		padding: 0;
@@ -41,21 +37,18 @@
 		font-size: em(14); // see functions.scss
 		font-weight: 400;
 		text-decoration: none;
-		@include transition(all 0.15s ease-in-out);
+		transition: all 0.15s ease-in-out;
 	}
-	.wpcom_logo {
+	.wpcom-logo {
 		top: 7px;
 	}
 }
-.wpcom_header_title {
+.wpcom-header__site-title {
 	float: left;
 }
-.wpcom_header_nav {
+.wpcom-nav {
 	h3 {
 		display: none;
-		// margin: 0;
-		// height: 46px;
-		// border: none;
 	}
 	> ul { // Top-level menu
 		display: inline-block;
@@ -74,11 +67,11 @@
 			line-height: 46px;
 			background: #fff;
 			background: rgba(255,255,255,0.99);
-			z-index: 9999;
-			@include box-shadow(
+			box-shadow:
 				0 0 2px rgba(0, 0, 0, 0.15),
 				0 3px 8px rgba(0, 0, 0, 0.1)
-			);
+			;
+			z-index: 9999; // Maybe change this?
 
 			ul { // Level 3+ menu
 				top: 0;
@@ -93,8 +86,9 @@
 
 				&:hover {
 					> a {
+						// Don't care for this hover
+						// Will change
 						color: #fff;
-						// Maybe not this bright blue
 						background: $base-lighter-blue;
 					}
 				}
@@ -161,28 +155,28 @@
 		a {
 			background: #36a3ca;
 			color: #fff;
+			box-shadow: inset 0 -1px 0 rgba(0, 86, 132, 0.5);
 			cursor: default;
-			@include box-shadow(inset 0 -1px 0 rgba(0, 86, 132, 0.5));
 		}
 	}
 }
 
 @media screen and (max-width: 768px) {
 	// A bit sloppy and could be refactored a bit.
-	.wpcom_header {
+	.wpcom-header {
 		position: fixed;
 		z-index: 10000;
 	}
-	.wpcom_header_title {
+	.wpcom-header__site-title {
 		margin-left: 6px;
 	}
-	.wpcom_header_nav {
+	.wpcom-nav {
 		background: #fafafa;
 		border-left: 1px solid #e7e7e7;
-		@include box-shadow(
+		box-shadow:
 			inset 0 2px 2px -2px rgba(0, 0, 0, 0.15),
 			inset 0 11px 8px -8px rgba(0, 0, 0, 0.1)
-		);
+		;
 
 		a {
 			display: block;
@@ -197,7 +191,7 @@
 		}
 		.current {
 			a {
-				@include box-shadow(none);
+				box-shadow: none;
 			}
 		}
 		li {
@@ -207,7 +201,7 @@
 				width: 100%;
 				border-left: 5px solid #e7e7e7;
 				background: transparent;
-				@include box-shadow(none);
+				box-shadow: none;
 
 				a {
 					border-bottom: 1px solid #f0f0f0;
