--- a/css/style.css
+++ b/css/style.css
@@ -897,8 +897,8 @@ hr {
 button,
 html input[type="button"],
 input[type="reset"],
-input[type="submit"], .button_primary,
-.button_secondary {
+input[type="submit"], .button--primary,
+.button--secondary {
   display: inline-block;
   padding: 0.69231em 1.15385em;
   font-size: 0.8125em;
@@ -921,8 +921,8 @@ input[type="submit"], .button_primary,
 button:hover,
 html input[type="button"]:hover,
 input[type="reset"]:hover,
-input[type="submit"]:hover, .button_primary:hover,
-.button_secondary:hover {
+input[type="submit"]:hover, .button--primary:hover,
+.button--secondary:hover {
   color: #fff;
   text-shadow: 0 -1px 0 #0074a2;
   -webkit-box-shadow: inset 0 1px 0 #2ea2cc, inset 0 2px 0 rgba(120, 200, 230, 0.7);
@@ -935,8 +935,8 @@ input[type="submit"]:hover, .button_primary:hover,
 button:active,
 html input[type="button"]:active,
 input[type="reset"]:active,
-input[type="submit"]:active, .button_primary:active,
-.button_secondary:active {
+input[type="submit"]:active, .button--primary:active,
+.button--secondary:active {
   color: rgba(255, 255, 255, 0.9);
   background: #3089b0;
   -webkit-box-shadow: inset 0 1px 5px #005684, inset 0 -1px 0 #278dbc;
@@ -949,20 +949,20 @@ input[type="submit"]:active, .button_primary:active,
 
 button[disabled],
 input[disabled],
-input[disabled]:hover, .button_primary[disabled],
-.button_primary:disabled {
+input[disabled]:hover, .button--primary[disabled],
+.button--primary:disabled {
   color: #94cde7;
   -webkit-box-shadow: none;
   box-shadow: none;
   background: #298cba;
 }
 
-.button_primary[disabled],
-.button_primary:disabled {
+.button--primary[disabled],
+.button--primary:disabled {
   cursor: default;
 }
 
-.button_secondary {
+.button--secondary {
   color: #555;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
   -webkit-box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.05), inset 0 2px 0 rgba(255, 255, 255, 0.4), inset 0 -1px 1px rgba(0, 0, 0, 0.1);
@@ -972,7 +972,7 @@ input[disabled]:hover, .button_primary[disabled],
   background-image: -webkit-linear-gradient(top, whitesmoke, #dddddd);
   background-image: linear-gradient(top, whitesmoke, #dddddd);
 }
-.button_secondary:hover {
+.button--secondary:hover {
   color: #222;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
   -webkit-box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.05), inset 0 2px 0 rgba(255, 255, 255, 0.5), inset 0 -1px 1px rgba(0, 0, 0, 0.1);
@@ -982,7 +982,7 @@ input[disabled]:hover, .button_primary[disabled],
   background-image: -webkit-linear-gradient(top, white, #dddddd);
   background-image: linear-gradient(top, white, #dddddd);
 }
-.button_secondary:active {
+.button--secondary:active {
   color: #555;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);
   -webkit-box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.3), inset 0 -1px 0 rgba(255, 255, 255, 0.5);
@@ -993,8 +993,8 @@ input[disabled]:hover, .button_primary[disabled],
   background-image: linear-gradient(top, whitesmoke, #dddddd);
 }
 
-.button_secondary[disabled],
-.button_secondary:disabled {
+.button--secondary[disabled],
+.button--secondary:disabled {
   color: #999;
   -webkit-box-shadow: none;
   box-shadow: none;
