--- a/scss/partials/buttons.scss
+++ b/scss/partials/buttons.scss
@@ -67,17 +67,17 @@ input[disabled]:hover {
 // ==========================================================================
 
 
-.button_primary,
-.button_secondary {
+.button--primary,
+.button--secondary {
 	@extend %button;
 }
-.button_primary[disabled],
+.button--primary[disabled],
 // .button--primary.disabled, Maybe?
-.button_primary:disabled {
+.button--primary:disabled {
 	@extend %button_disabled;
 	cursor: default;
 }
-.button_secondary {
+.button--secondary {
 	color: #555;
 	text-shadow: 0 1px 0 rgba(255,255,255,.7);
 	box-shadow:
@@ -107,9 +107,9 @@ input[disabled]:hover {
 		@include gradient(#f5f5f5, #ddd);
 	}
 }
-.button_secondary[disabled],
+.button--secondary[disabled],
 // .button--secondary.disabled, Maybe?
-.button_secondary:disabled {
+.button--secondary:disabled {
 	color: #999;
 	box-shadow: none;
 	background: #e3e3e3;
